# utbtn

./: README.md  pyproject.toml
misc/: javascript_img_to_base64.txt  minimalist_ocr.txt
utbtn/: utbtn-encode.py  utbtn.py  utbtn2lib.py  utbtn_decode.py  utbtn_encode.py  utbtnlib.py  utbtntest.py
