[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "utbtn"}

[project]
name = "utbtn"
version = "0.0.1"
authors = [
  { name="Paul Kim", email="pauljoohyunkim@gmail.com" },
]
description = "An app for transporting a file across two networks that are not connected via printed pages. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pauljoohyunkim/utbtn"
Issues = "https://github.com/pauljoohyunkim/utbtn/issues"

[project.scripts]
utbtn = "utbtn:main"